--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "ember-data": "1.13.8",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
-    "ember-moment": "4.0.1"
+    "ember-modal-dialog": "0.8.1",
+    "ember-moment": "4.0.1",
+    "liquid-fire": "0.21.3"
   }
 }
